<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vickykatara.personalblackbox.MainActivity">

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:text="@string/contexts_title"-->
        <!--android:id="@+id/testingTitle"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true" />-->

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:dividerPadding="5px"
        android:paddingStart="10px"
        android:layout_alignParentEnd="false"
        android:padding="5px"
        android:layout_centerHorizontal="true"
        android:paddingLeft="10px"
        android:layout_alignParentRight="false">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp">
            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/someTextView1"
                android:text="@string/absolute_emergencies"
                android:layout_column="0" />
        </TableRow>

        <!-- Pressure Sensor -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/barometric_pressure_title"
                android:id="@+id/textView12"
                android:layout_column="0" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_string"
                android:id="@+id/pressureSwitch"
                android:layout_column="2"
                android:checked="false"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/pressureTextView"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:text="     "
                android:layout_column="1" />
        </TableRow>

        <!-- Pressure Sensor Done-->

        <!-- Sound Sensor -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sound_title"
                android:id="@+id/textView11"
                android:layout_column="0" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_string"
                android:id="@+id/soundSwitch"
                android:layout_column="2"
                android:checked="false"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/soundTextView"
                android:layout_column="0" />
        </TableRow>

        <!-- Sound Sensor Done -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/someTextView2"
                android:text="@string/dangerous_situations"
                android:layout_column="0"
                android:paddingTop="@dimen/place_autocomplete_progress_size" />
        </TableRow>

        <!-- Driving Sensor -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/currently_driving_title"
                android:id="@+id/textView14"
                android:layout_column="0" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_string"
                android:id="@+id/drivingSwitch"
                android:layout_column="2"
                android:checked="false"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/drivingTextView"
                android:layout_column="0" />
        </TableRow>

        <!-- Driving Sensor Done -->

        <!-- Walking Sensor -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/walking_title"
                android:id="@+id/textView15"
                android:layout_column="0" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_string"
                android:id="@+id/walkingSwitch"
                android:layout_column="2"
                android:checked="false"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/walkingTextView"
                android:layout_column="0" />
        </TableRow>

        <!-- Walking Sensor Done -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/someTextView3"
                android:text="@string/distractions"
                android:layout_column="0"
                android:paddingTop="@dimen/place_autocomplete_progress_size" />
        </TableRow>

        <!-- Ongoing Call Sensor -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/call_title"
                android:id="@+id/textView13"
                android:layout_column="0" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_string"
                android:id="@+id/ongoingCallSwitch"
                android:layout_column="2"
                android:checked="false"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/onGoingCallTextView"
                android:layout_column="0" />
        </TableRow>

        <!-- OnGoing Call Sensor Done -->

        <!-- Keyboard Out Sensor -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/keyboard_title"
                android:id="@+id/textView16"
                android:layout_column="0" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_string"
                android:id="@+id/keyboardSwitch"
                android:layout_column="2"
                android:checked="false"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/keyboardTextView"
                android:layout_column="0" />
        </TableRow>
        <!-- Keyboard Out Sensor Done -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:layout_width="@dimen/cast_libraries_material_featurehighlight_center_threshold"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/just_type"
                android:ems="10"
                android:layout_marginLeft="23dp"
                android:layout_marginStart="23dp"
                android:id="@+id/editText2"
                android:layout_column="0"
                tools:layout_height="@dimen/cast_libraries_material_featurehighlight_text_horizontal_margin" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
